SE AVANZO CON EL TEMA DE LA CARPETA HEAVY EN LAS UPLOADS: